@@ -84,12 +84,15 @@ All routines are exported by default.
 
 =head2 in
 
+=head2 trap
+
 A proctored service is defined using the C<service> function. The name given to
 the service is used in the naming of various files used to control the service
 (e.g., pid file and touch files). The C<in> function is used to specify the
-local directory where these files will be created and looked for.
+local directory where these files will be created and looked for. Signals may
+be trapped using C<trap> on non-C<MSWin32> systems.
 
-  my $service = service 'name-of-service', in '/var/run';
+  my $service = service 'name-of-service', in '/var/run', trap ['TERM', 'INT'];
 
 =head2 pid
 
