@@ -3,12 +3,13 @@ package Proc::tored::Types;
 
 use strict;
 use warnings;
-use Types::Standard 'Str';
+use Types::Standard -types;
 use Type::Utils -all;
 use Type::Library -base,
   -declare => qw(
     NonEmptyStr
     Dir
+    SignalList
   );
 
 =head1 TYPES
@@ -21,9 +22,14 @@ A C<Str> that contains at least one non-whitespace character.
 
 A L</NonEmptyStr> that is a valid, writable directory path.
 
+=head2 SignalList
+
+An array ref of strings suitable for use in C<%SIG>, except on MSWin32 systems.
+
 =cut
 
 declare NonEmptyStr, as Str, where { $_ =~ /\S/ };
 declare Dir, as NonEmptyStr, where { -d $_ && -w $_ };
+declare SignalList, as ArrayRef[Str], where { @$_ || $^O ne 'MSWin32' };
 
 1;
