@@ -1,5 +1,6 @@
 {{$NEXT}}
 - Remove pidfile after service completes
+- Configurable signal trapping
 
 0.09 2017-02-21
 - Added Proc::tored::Manager->stop_file and ->pause_file to override touch file paths
